--- a/style.css
+++ b/style.css
@@ -1,64 +1,206 @@
-*,body{
-    margin: 0px;
-    padding: 0px;
-    border: none;
-    overflow-x:hidden;
-     font-family: "Plus Jakarta Sans", sans-serif;
+*,
+body {
+  margin: 0px;
+  padding: 0px;
+  border: none;
+  overflow-x: hidden;
+
+  font-family: "Plus Jakarta Sans", sans-serif;
   font-optical-sizing: auto;
-  
+
   font-style: normal;
+}
+body{
+  background-color: rgb(235, 232, 227);
+}
+.navbar {
+  height: 67px;
+  width: 100%;
+
+  overflow-y: hidden;
+}
+.logo {
+  height: inherit;
+  width: 15%;
+  display: inline-block;
+}
+
+.navbar > .logo > .sumip {
+  height: inherit;
+  width: inherit;
+  font-weight: bold;
+  font-size: 32px;
+  margin-left: 45px;
+  position: relative;
+  top: 14px;
+}
+.navbar > .content {
+  height: inherit;
+  display: inline-block;
+  width: 60%;
+}
+.main-nav {
+  list-style-type: none;
+  height: inherit;
+  align-items: center;
+  align-content: center;
+}
+.nav-links {
+  display: inline;
+  margin-left: 60px;
+}
+
+.dropdown {
+  appearance: none;
+  font-weight: 500px;
+  /* border: 1px solid rgb(197, 89, 89); */
+  border-radius: 24px;
+  height: 30px;
+  background-color: rgb(248, 248, 245);
+  padding-left: 19px;
+}
+
+.dropdown:focus {
+  outline: none;
+}
+.dropdown:focus-within {
+  outline: none;
+}
+.d2 {
+  width: 136px;
+}
+.list {
+  background-color: rgb(248, 248, 245);
+  outline-style: none;
+  height: 31px;
+  padding: 7px;
+  width: inherit;
+  border-radius: 24px;
+}
+.buttons {
+  height: inherit;
+  width: 12%;
+  display: inline-block;
+  margin-left: 5%;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+}
+
+.nav-button {
+  height: 32px;
+  width: 77px;
+
+  border-radius: 24px;
+}
+.nav-button:hover {
+  background-color: rgb(184, 163, 171);
+}
+.btn-black {
+  background-color: black;
+  color: azure;
+  height: 40px;
+  width: 78px;
+}
+.hero {
+     display:flex;
+  height: 450px;
+  width: 100%;
+ 
+  align-items: center;
+  align-self: center;
+  align-content: center;
+
+ 
+}
+.center {
+  position: relative;
+  
+  width: 70%;
+  left: 15%;
+  height: 405px;
+}
+.hero > .center > .features {
+ background-color: rgb(248, 248, 245);
+  height: 20px;
+  width: 245px;
+  border-radius: 24px;
+  overflow-y: hidden;
+  justify-self: center;
+  margin-left: 342px;
+}
+  
+.justify-center {
+  justify-self: center;
   
 }
-.navbar{
-height: 86px;
-width: 100%;
-border: 1px solid black;
+.margin-top{
+    margin-top: 30px;
+}
+.bold {
+  font-weight: bold;
+}
+.center-button{
+    position: relative;
+    left: 42%;
+    width: 115px;
 
 }
-.navbar>.logo{
-    height: inherit;
-    width:15%;
-    display:inline-block;
+.heading{
+    font-size: large;
+    margin-left: 172px;
     
 }
-
-.navbar>.logo>.sumip{
-    height: inherit;
-    width: inherit;
-font-weight: bold;
-font-size: 25px;
-margin-left: 45px;
-position: relative;
-top:22px;
-
+.heading1{
+  margin-left: 105px;
 }
-.navbar>.content>{
-    height: inherit;
-     display: inline-block;
-     width: 60%;
-     border: 1px solid black;
-     margin-left: 8%;
-     
-     
-
+.upper-center{
+    position: relative;
+    left:144px;
 }
-.main-nav{
-    list-style-type: none;
-   height: inherit;
-   align-items: center;
-   align-content: center;
-     
-     margin-left: 104px;
-}
-.main-nav>.nav-links{
-    display: inline;
+.subtext{
+    font-size:smaller;
     margin-left: 100px;
 }
-.list{
-    background-color: rgb(248, 248, 245);
-    outline-style: none;
-    height: 31px;
-    padding: 7px;
-    width: inherit;
-    border-radius: 24px;
+.subtext2{
+  font-size:smaller;
+  margin-left: 207px;
 }
+.arrow{
+  height:18px;
+  width:18px ;
+  border-radius: 5%;
+  background-color: black;
+}
+.icons{
+  height: 60px;
+  width: 100%;
+ 
+  overflow: hidden;
+  
+}
+.icon1{
+  height: 60px;
+  /* width: 100%; */
+  margin-left:190px;
+  margin-top: 8px;
+  display: inline;
+}
+
+ .images{
+  height:200px;
+  width: 100%;
+ 
+  overflow: hidden;
+  margin-top:20px;
+
+
+  
+}
+
+.images>.image1{
+  height: 200px;
+  width:16%;
+  display: inline;
+  margin-left: 5px;
+} 
